--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "discord-bot",
+    "name": "template-discord-bot",
     "version": "1.0.0",
     "description": "",
     "main": "src/index.js",
-    "repository": "https://github.com/nhutlamm/discord-bot.git",
+    "repository": "https://github.com/nhutlamm/template-discord-bot.git",
     "author": "nhutlamm",
     "scripts": {
         "start": "node src/index.js",
